fix(backend): fixing chat/message service for new structure